Issue #SB30103 User is not able to visible the text word of Mobile number and Email address clearly in the register page

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -1527,3 +1527,8 @@ html[layout=joy] sb-form .multi-select-container .list-border {
   }
 
 }
+html[data-theme=Darkmode] {
+  .field>label, .inline.fields>label, .ui.modal .ui.radio.checkbox .box, .ui.radio.checkbox label{
+    color: var(--black);
+  }
+}
